--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -42,6 +42,10 @@ body {
     line-height: 2;
 }
 
+.line-height-3 {
+    line-height: 1.6875;
+}
+
 //Go To Top
 #return-to-top {
     position: fixed;
