--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -94,6 +94,103 @@ section.introduction {
     }
 }
 
+section.how-it-works {
+    background: linear-gradient(151.67deg, #7820BC 15%, $primary 121.08%);
+    padding: 198px 0 51px;
+    color: $white;
+}
+
+section.about {
+    background: $light;
+    padding-top: 231px;
+
+    .loans-slider-wrapper {
+        padding: 56px 0;
+
+        ul {
+            display: flex;
+            position: relative;
+            padding: 0;
+            margin: 0;
+
+            li {
+                list-style: none;
+
+                .loan-slider-btn {
+                    height: 50px;
+                    transition: 0.5s;
+                    padding: 4px 24px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                    z-index: 5;
+                }
+
+                &.slide {
+                    position: absolute;
+                    height: 50px;
+                    background: $white;
+                    border-radius: 100px;
+                    border: 1px solid $primary-dark;
+                    top: 0;
+                    left: 0;
+                    z-index: 1;
+                    transition: 0.5s;
+                    opacity: 0;
+                }
+
+                &:nth-child(1).active~.slide,
+                &:nth-child(2).active~.slide,
+                &:nth-child(3).active~.slide {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .loans-slider {
+            padding-top: 17px;
+
+            .loan-slider-content-wrapper {
+                .loan-slider-content {
+                    margin-top: 48px;
+                    height: 501px;
+                    padding: 0 18px;
+                    overflow-y: visible;
+
+                    &.slider-1 {
+                        background: linear-gradient(93.66deg, $primary 18.67%, #9E4AFF 77.16%);
+                        border-radius: 44px;
+
+                        .slider-img {
+                            margin-top: -46px;
+                            padding-right: 95px;
+                        }
+                    }
+
+                    .slider-text {
+                        padding: 66px 68px 0;
+                    }
+                }
+
+                .cards-wrapper {
+                    padding: 0 25px;
+                    margin: -7rem 0 3rem;
+
+                    .slider-card {
+                        background: $white;
+                        border-radius: 16px;
+                        filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.25));
+                        min-height: 263px;
+                        padding: 21px 17px;
+                        color: $primary-dark;
+                    }
+                }
+            }
+        }
+    }
+}
+
 footer {
     font-size: 0.875rem;
     background-color: #221f1f;
