--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -240,11 +240,151 @@ section.about {
     }
 
     .rates-slider-wrapper {
+        padding: 15px 0;
+
         .rates-slider {
-            &.slider-1 {
-                background: $quartinary;
-                padding: 45px 77px 30px;
+            .rates-slider-content {
+                margin: 4rem 4px;
                 border-radius: 27px;
+                padding: 45px 77px 30px;
+
+                &.slider-1 {
+                    background: $quartinary;
+
+                    .percentage-img {
+                        position: absolute;
+                        top: -10.5rem;
+                        width: 100%;
+                    }
+                }
+
+                &.slider-2 {
+                    background: $primary-dark;
+                }
+            }
+        }
+    }
+
+    .cta-2 {
+        padding: 151px 0;
+    }
+
+    .faq {
+        padding: 49px 0 141px;
+        position: relative;
+
+        .faq-img {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        .accordion-container {
+            width: 100%;
+
+            .accordion-card {
+                margin: 13px 0;
+            }
+
+            .accordion-head {
+                cursor: pointer;
+                font-weight: 900;
+                text-transform: capitalize;
+                padding: 1rem 0;
+                transition: 0.2s all;
+                font-size: 1.5rem;
+                align-items: center;
+                display: flex;
+                border-bottom: 0.25px solid $dark;
+                justify-content: space-between;
+                color: $primary-dark;
+
+                @include media-breakpoint-up(xl) {
+                    font-size: 1.5rem; // 24px
+                    padding: 45px 34px 45px 0;
+                }
+
+                .main-question {
+                    @include media-breakpoint-down(sm) {
+                        max-width: 95%;
+                    }
+                }
+
+                .plusminus {
+                    background: linear-gradient(135.06deg, #4A55FA 0.94%, #937EFC 98.94%);
+                    border-radius: 100%;
+                    height: 33px;
+                    width: 33px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: $white;
+                }
+            }
+
+            .accordion-body {
+                color: $dark;
+                font-weight: 500;
+                display: none;
+                padding: 24px 1rem;
+                line-height: 2;
+                font-size: 1rem; // 16px
+
+                @include media-breakpoint-up(md) {
+                    padding: 34px 34px 0 0;
+                }
+
+                @include media-breakpoint-down(sm) {
+                    font-size: 0.875rem;
+                }
+            }
+        }
+    }
+
+    .testimonials {
+        padding-bottom: 60px;
+        
+        .testimonial-slider {
+            .slick-slide {
+                margin: 19px 15px;
+            }
+
+            .testimonial-card {
+                background: $white;
+                box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+                border-radius: 35px;
+                padding: 34px 39px;
+
+                .username {
+                    font-size: 1.5rem;
+                    font-weight: 800;
+                    color: $black;
+
+                    @include media-breakpoint-down(sm) {
+                        font-size: 1rem;
+                    }
+                }
+
+                .date {
+                    font-size: 1rem;
+                    color: rgba(0, 0, 0, 0.5);
+
+                    @include media-breakpoint-down(sm) {
+                        font-size: 0.875rem;
+                    }
+                }
+
+                .comment {
+                    line-height: 1.25;
+                    color: $black;
+                    font-size: 1rem;
+                    padding: 24px 0 0;
+                }
+
+                .verified {
+                    color: rgba(0,0,0,0.5);
+                    text-transform: uppercase;
+                }
             }
         }
     }
