--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,8 +9,7 @@ $tertiary: #EB6D45;
 $black: #000000;
 $white: #ffffff;
 $light: #f3f3f3;
-
-$dark: #414042;
+$dark: #8B8B8B;
 
 $theme-colors: (
     ) !default;
