--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -5,27 +5,101 @@
 header {
     background-color: $white;
 
-    ul.navbar-nav {
-        .nav-item a.nav-link {
-            font-weight: 700;
-            font-size: 1.125rem;
-            padding-left: 24px;
-            padding-right: 24px;
-            color: $primary-dark;
+    @include media-breakpoint-down(sm) {
+        background-color: $primary-dark;
+    }
+
+    .navbar-toggler {
+        border: 0;
+        padding: 0;
+        margin-left: 64px;
+
+        &:focus {
+            outline: none;
+            box-shadow: none;
+        }
+    }
+
+    .navbar-collapse {
+        @include media-breakpoint-down(sm) {
+            padding: 20px;
+        }
+
+        ul.navbar-nav {
+            .nav-item {
+                a.nav-link {
+                    font-weight: 700;
+                    font-size: 1.125rem;
+                    padding-left: 24px;
+                    padding-right: 24px;
+                    color: $primary-dark;
+
+                    @include media-breakpoint-down(sm) {
+                        text-align: center;
+                        padding: 16px;
+                    }
+                }
+                
+                @include media-breakpoint-down(sm) {
+                    border-bottom: 1px solid $primary;
+
+                    &:last-child {
+                        border: 0;
+                    }
+                }
+            }
+
+            @include media-breakpoint-down(sm) {
+                padding: 12px 48px 0;
+            }
         }
     }
 }
 
 section.banner {
-    background: linear-gradient($primary-dark, $primary-light, $white);
-    padding: 120px 0 34px;
+    padding: 78px 0 21px;
+    background: linear-gradient($primary-dark, $primary-light);
+    
+    @include media-breakpoint-up(md) {
+        background: linear-gradient($primary-dark, $primary-light, $white);
+        padding: 120px 0 34px;
+    }
+
+    @include media-breakpoint-down(sm) {
+        .banner-heading {
+            font-size: 3rem !important;
+        }
+
+        .banner-subheading {
+            font-size: 1rem !important;
+        }
+    }
+
+    .banner-guy-mobile-wrapper {
+        position: relative;
+        height: 167px;
+
+        .banner-guy-mobile {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
+
+        @include media-breakpoint-up(md) {
+            display: none;
+        }
+    }
 
     .interest-plan {
         background-color: $primary-dark;
-        padding: 10px 10px 10px 70px;
         color: $white;
         border-radius: 70px;
-        margin: 30px 0;
+        padding: 4px 4px 4px 26px;
+        
+        @include media-breakpoint-up(md) {
+            margin: 30px 0;
+            padding: 10px 10px 10px 70px;
+        }
 
         .divider {
             width: 2px;
@@ -44,6 +118,35 @@ section.banner {
             display: flex;
             align-items: center;
             justify-content: center;
+
+            @include media-breakpoint-down(sm) {
+                height: 36px;
+                font-size: 0.75rem !important;
+                font-weight: 400;
+            }
+        }
+
+        @include media-breakpoint-down(sm) {
+            .subtext {
+                font-size: 0.65rem !important;
+                opacity: 0.8;
+            }
+
+            .herotext {
+                font-size: 1.25rem !important;
+            }
+        }
+    }
+
+    @include media-breakpoint-down(sm) {
+        .google-review-heading {
+            font-size: 1.25rem !important;
+        }
+    
+        .google-review-subheading {
+            padding-top: 4px;
+            line-height: 1.4;
+            font-size: 0.75rem !important;
         }
     }
 
@@ -60,8 +163,51 @@ section.banner {
     }
 }
 
+section.loan-types-mobile {
+    background: $light;
+    padding: 47px 0 73px;
+
+    @include media-breakpoint-up(md) {
+        display: none;
+    }
+
+    .heroHeading {
+        font-size: 2.25rem;
+        font-weight: 900;
+        line-height: 1;
+        color: $primary-dark;
+    }
+
+    .subHeading {
+        font-size: 1rem;
+        color: $primary-dark;
+        line-height: 1.3125;
+        padding-top: 6px;
+    }
+
+    .loan-type-card {
+        background: $white;
+        border-radius: 16px;
+        filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.25));
+        height: 325px;
+        overflow: hidden;
+    }
+}
+
 section.lenders {
     padding-bottom: 165px;
+
+    @include media-breakpoint-down(sm) {
+        padding: 64px 0 0;
+
+        .heroHeading {
+            font-size: 2.25rem !important;
+        }
+
+        .subheading {
+            font-size: 1rem !important;
+        }
+    }
 
     .lender-slider-1,
     .lender-slider-2,
@@ -76,13 +222,32 @@ section.lenders {
             justify-content: center;
             align-items: center;
             margin: 1rem 0;
+
+            @include media-breakpoint-down(sm) {
+                margin: 1rem 0.5rem;
+            }
         }
     }
 }
 
 section.cta {
     background: imgUrl('cta.png') left top;
-    padding: 140px 0 262px;
+    padding: 90px 0;
+
+    @include media-breakpoint-up(md) {
+        padding: 140px 0 262px;
+    }
+
+    @include media-breakpoint-down(sm) {
+        .cta-subheading {
+            font-size: 1rem !important;
+            padding: 24px 0 16px;
+        }
+
+        .cta-heading {
+            font-size: 1.5rem !important;
+        }
+    }
 }
 
 section.introduction {
@@ -390,11 +555,11 @@ section.about {
     }
 }
 
-footer {    
+footer {
     padding: 113px 0 66px;
     background: imgUrl('footer-top.png') right 146px $primary;
     color: $white;
-    
+
     ul.quick-links {
         padding-inline-start: 0;
         padding-top: 31px;
