--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -39,7 +39,7 @@ header {
                         padding: 16px;
                     }
                 }
-                
+
                 @include media-breakpoint-down(sm) {
                     border-bottom: 1px solid $primary;
 
@@ -59,7 +59,7 @@ header {
 section.banner {
     padding: 78px 0 21px;
     background: linear-gradient($primary-dark, $primary-light);
-    
+
     @include media-breakpoint-up(md) {
         background: linear-gradient($primary-dark, $primary-light, $white);
         padding: 120px 0 34px;
@@ -95,7 +95,7 @@ section.banner {
         color: $white;
         border-radius: 70px;
         padding: 4px 4px 4px 26px;
-        
+
         @include media-breakpoint-up(md) {
             margin: 30px 0;
             padding: 10px 10px 10px 70px;
@@ -142,7 +142,7 @@ section.banner {
         .google-review-heading {
             font-size: 1.25rem !important;
         }
-    
+
         .google-review-subheading {
             padding-top: 4px;
             line-height: 1.4;
@@ -232,7 +232,7 @@ section.lenders {
 
 section.cta {
     background: imgUrl('cta.png') left top;
-    padding: 90px 0;
+    padding: 90px 0 43px;
 
     @include media-breakpoint-up(md) {
         padding: 140px 0 262px;
@@ -257,17 +257,40 @@ section.introduction {
         column-gap: 0;
         padding-inline-start: 16px;
     }
+
+    @include media-breakpoint-down(sm) {
+        .call-btn {
+            font-size: 0.875rem !important;
+        }
+    }
 }
 
 section.how-it-works {
     background: linear-gradient(151.67deg, #7820BC 15%, $primary 121.08%);
-    padding: 198px 0 51px;
     color: $white;
+    padding: 64px 19px 0;
+
+    @include media-breakpoint-up(md) {
+        padding: 198px 0 51px;
+    }
+
+    @include media-breakpoint-down(sm) {
+        .heroHeading {
+            font-size: 2.25rem !important;
+        }
+
+        .subHeading {
+            font-size: 1rem !important;
+        }
+    }
 }
 
 section.about {
     background: $light;
-    padding-top: 231px;
+
+    @include media-breakpoint-up(md) {
+        padding-top: 231px;
+    }
 
     .loans-slider-wrapper {
         padding: 56px 0;
@@ -431,17 +454,31 @@ section.about {
     }
 
     .cta-2 {
-        padding: 151px 0;
+        padding: 70px 0;
+
+        @include media-breakpoint-up(md) {
+            padding: 151px 0;
+        }
     }
 
     .faq {
-        padding: 49px 0 141px;
         position: relative;
+        padding: 49px 0 54px;
+
+        @include media-breakpoint-up(md) {
+            padding: 49px 0 141px;
+        }
 
         .faq-img {
-            position: absolute;
-            top: 0;
-            left: 0;
+            @include media-breakpoint-up(md) {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+
+            @include media-breakpoint-up(sm) {
+                padding-bottom: 27px;
+            }
         }
 
         .accordion-container {
@@ -471,19 +508,27 @@ section.about {
 
                 .main-question {
                     @include media-breakpoint-down(sm) {
-                        max-width: 95%;
+                        line-height: 1;
+                        max-width: 80%;
                     }
                 }
 
                 .plusminus {
                     background: linear-gradient(135.06deg, #4A55FA 0.94%, #937EFC 98.94%);
                     border-radius: 100%;
-                    height: 33px;
-                    width: 33px;
+                    height: 17px;
+                    width: 17px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     color: $white;
+                    font-size: 1rem;
+
+                    @include media-breakpoint-up(md) {
+                        height: 33px;
+                        width: 33px;
+                        font-size: 2rem;
+                    }
                 }
             }
 
@@ -491,7 +536,7 @@ section.about {
                 color: $dark;
                 font-weight: 500;
                 display: none;
-                padding: 24px 1rem;
+                padding: 24px 0;
                 line-height: 2;
                 font-size: 1rem; // 16px
 
@@ -509,6 +554,21 @@ section.about {
     .testimonials {
         padding-bottom: 60px;
 
+        @include media-breakpoint-down(sm) {
+            .heroHeading {
+                font-size: 2rem !important;
+                line-height: 1;
+            }
+
+            .subHeading {
+                font-size: 0.75rem !important;
+            }
+
+            .testimonial-star {
+                width: 187px;
+            }
+        }
+
         .testimonial-slider {
             .slick-slide {
                 margin: 19px 15px;
@@ -518,7 +578,11 @@ section.about {
                 background: $white;
                 box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
                 border-radius: 35px;
-                padding: 34px 39px;
+                padding: 24px;
+
+                @include media-breakpoint-up(md) {
+                    padding: 34px 39px;
+                }
 
                 .username {
                     font-size: 1.5rem;
@@ -549,6 +613,10 @@ section.about {
                 .verified {
                     color: rgba(0, 0, 0, 0.5);
                     text-transform: uppercase;
+
+                    @include media-breakpoint-down(sm) {
+                        display: none;
+                    }
                 }
             }
         }
@@ -556,9 +624,27 @@ section.about {
 }
 
 footer {
-    padding: 113px 0 66px;
-    background: imgUrl('footer-top.png') right 146px $primary;
+    background: $primary;
     color: $white;
+    padding: 41px 0;
+    
+    @include media-breakpoint-up(md) {
+        background: imgUrl('footer-top.png') right 146px $primary;
+        padding: 113px 0 66px;
+    }
+
+    .footer-contact-button {
+        .btn {
+            height: 82px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            @include media-breakpoint-down(sm) {
+                height: 59px;
+            }
+        }
+    }
 
     ul.quick-links {
         padding-inline-start: 0;
@@ -601,6 +687,12 @@ footer {
         font-weight: 700;
     }
 
+    .copyright {
+        @include media-breakpoint-down(sm) {
+            font-size: 0.75rem;
+        }
+    }
+
     .newsletter-form {
         display: flex;
         background: rgba(255, 255, 255, 0.12);
@@ -640,5 +732,18 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    @include media-breakpoint-down(sm) {
+        .heroHeading {
+            line-height: 1.14;
+            font-size: 2rem !important;
+        }
+
+        .subHeading {
+            padding: 24px 16px;
+            line-height: 1.3125;
+            font-size: 1rem !important;
+        }
     }
 }
