--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -5,9 +5,16 @@
 header {
     background-color: $white;
 
+    @include media-breakpoint-down(xxl) {
+        .navbar-logo {
+            width: 332px;
+        }
+    }
+
     @include media-breakpoint-down(sm) {
         background-color: $primary-dark;
     }
+
 
     .navbar-toggler {
         border: 0;
@@ -452,7 +459,11 @@ section.about {
 
                 .cards-wrapper {
                     padding: 0 25px;
-                    margin: -7rem 0 3rem;
+                    margin: -4rem 0 3rem;
+
+                    @include media-breakpoint-up(xxl) {
+                        margin: -7rem 0 3rem;
+                    }
 
                     .slider-card {
                         background: $white;
