Tablet screen done

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -97,7 +97,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: $primary;
+    background: $tertiary;
 }
 
 ::-webkit-scrollbar-thumb:hover {
