--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,9 @@
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 
 //aos
-// @import 'node_modules/aos/src/sass/core';
-// @import 'node_modules/aos/src/sass/easing';
-// @import 'node_modules/aos/src/sass/animations';
+@import 'node_modules/aos/src/sass/core';
+@import 'node_modules/aos/src/sass/easing';
+@import 'node_modules/aos/src/sass/animations';
 
 //slick
 @import "node_modules/slick-carousel/slick/slick.scss";
