Mobile design done

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -7,11 +7,11 @@ header {
 
     .navbar-logo {
         display: flex;
-        
+
         @include media-breakpoint-between(xl, xxl) {
             width: 332px;
         }
-        
+
         @include media-breakpoint-down(xl) {
             justify-content: space-between;
             width: 100%;
@@ -780,7 +780,12 @@ section.about {
         }
 
         .testimonial-slider {
+            .slick-track {
+                display: flex !important;
+            }
+
             .slick-slide {
+                height: inherit !important;
                 margin: 19px 15px;
             }
 
@@ -789,6 +794,9 @@ section.about {
                 box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
                 border-radius: 35px;
                 padding: 24px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
 
                 @include media-breakpoint-up(md) {
                     padding: 34px 39px;
@@ -871,12 +879,28 @@ footer {
             a {
                 text-decoration: none;
                 color: $white;
+
+                @include media-breakpoint-down(sm) {
+                    text-align: center;
+                    display: block;
+                }
             }
+        }
+
+        @include media-breakpoint-down(sm) {
+            display: none;
         }
     }
 
     .social-icon {
         box-shadow: 0px 6px 12px -6px rgba(24, 39, 75, 0.12), 0px 8px 24px -4px rgba(24, 39, 75, 0.08);
+    }
+
+    .map-wrapper-sm {
+        padding: 24px 0;
+        font-size: 0.875rem;
+        text-align: center;
+        display: none;
     }
 
     .google-map {
@@ -886,7 +910,7 @@ footer {
 
         @include media-breakpoint-up(xl) {
             width: 70%;
-        height: 201px;
+            height: 201px;
         }
     }
 
