--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -525,7 +525,7 @@ section.about {
                         background: $white;
                         border-radius: 16px;
                         filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.25));
-                        min-height: 263px;
+                        height: 100%;
                         padding: 21px 17px;
                         color: $primary-dark;
                     }
