--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1030,6 +1030,7 @@ footer {
             font-size: 0.75rem;
             color: $white;
             letter-spacing: 1px;
+            padding: 12px 16px;
 
             &::placeholder {
                 color: rgba(255, 255, 255, 0.5);
